--- a/.gitattributes
+++ b/.gitattributes
@@ -5,19 +5,17 @@ maven-wrapper.properties    text eol=lf
 *.jar filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
-*.jpg filter=lfs diff=lfs merge=lfs -text
-*.jpeg filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
-*.gif filter=lfs diff=lfs merge=lfs -text
+# Exclude pictures from Git LFS due to BitBucket Server bug
+# on images rendering from markdown files
+# Cf. https://jira.atlassian.com/browse/BSERV-11155
+# *.jpg filter=lfs diff=lfs merge=lfs -text
+# *.jpeg filter=lfs diff=lfs merge=lfs -text
+# *.png filter=lfs diff=lfs merge=lfs -text
+# *.gif filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 # The line below is required to handle linux and macos exe files (w/o extension) as large files
 **/tcr/*/bin/* filter=lfs diff=lfs merge=lfs -text
 # Git LFS filter: below files are never treated as large files
 *.md -filter=lfs -diff=lfs -merge=lfs text
-*.jpg !text !filter !merge !diff
-*.jpeg !text !filter !merge !diff
-*.png !text !filter !merge !diff
-*.gif !text !filter !merge !diff
-*.md !text !filter !merge !diff
 * !text !filter !merge !diff
 java/src/main/resources !text !filter !merge !diff
