--- a/java/build.gradle
+++ b/java/build.gradle
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     // JUnit 4
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
 
 group = 'com.murex.xpcoaching'
