--- a/typescript/package.json
+++ b/typescript/package.json
@@ -7,14 +7,16 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.0",
+    "@types/node": "^22.10.1",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   },
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage",
+    "update-snapshot": "jest --update-snapshot"
   },
   "jest-junit": {
     "outputDirectory": "./test_results"
